--- a/ai/langchain/quickstart.ipynb
+++ b/ai/langchain/quickstart.ipynb
@@ -1,17 +1,306 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "46e07b06-7463-4c51-8816-5138f5a48688",
+   "metadata": {},
+   "source": [
+    "# Langchain Quickstart"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3847a02-815e-4fde-ace4-24acc0524364",
+   "metadata": {},
+   "source": [
+    "## 1. Load API Key with .env"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aef71e7b",
+   "id": "fe999a26-38b6-430c-852f-4b2c91f1c10b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('Welcome to the quickstart notebook!')"
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "# Your .env file should contain OPENAI_API_KEY=abc\n",
+    "load_dotenv()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a24f9da-7129-4c5b-ac27-9f1792b333c3",
+   "metadata": {},
+   "source": [
+    "## 2. Test Replicate's AI API"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d00f65da-66d5-459c-86b7-f6c0dafeb6d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import openai\n",
+    "\n",
+    "class OpenaiAPI:\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        \"\"\"\n",
+    "        Initialize API client\n",
+    "        \"\"\"\n",
+    "        self.client = openai.OpenAI(\n",
+    "            # defaults to os.environ.get(\"OPENAI_API_KEY\")\n",
+    "            api_key=os.environ.get(\"OPENAI_API_KEY\"),\n",
+    "        )\n",
+    "        \n",
+    "    def message(self, message):\n",
+    "        \"\"\"\n",
+    "        Function to generate a response using GPT3.5 model.\n",
+    "        \"\"\"\n",
+    "        \n",
+    "        response = self.client.chat.completions.create(\n",
+    "            model=\"gpt-3.5-turbo\",\n",
+    "            messages=[\n",
+    "                {\"role\": \"user\", \"content\": message},\n",
+    "            ]\n",
+    "        )\n",
+    "\n",
+    "        return response.choices[0].message.content\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35e3974a-80d0-4e72-bfae-4a3f541e5a79",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_openai import ChatOpenAI\n",
+    "\n",
+    "llm = ChatOpenAI()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b1e7f66-ef9b-4a59-8682-7ee462e19e0c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_openai import ChatOpenAI\n",
+    "\n",
+    "llm = ChatOpenAI(api_key=os.environ.get(\"OPENAI_API_KEY\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e125c5b0-74ae-47ce-81ce-f61dff46ceaa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "llm.invoke(\"how can langsmith help with testing?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ed63c6b-9f31-4343-8048-bdb5a56f36da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_core.prompts import ChatPromptTemplate\n",
+    "prompt = ChatPromptTemplate.from_messages([\n",
+    "    (\"system\", \"You are a world class technical documentation writer.\"),\n",
+    "    (\"user\", \"{input}\")\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c085a32-3629-487a-a3f5-f46abfb4e927",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chain = prompt | llm "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f80ea4c4-b65e-494f-996e-42dfd495160a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_core.output_parsers import StrOutputParser\n",
+    "\n",
+    "output_parser = StrOutputParser()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d6e7e6a-b526-401f-b872-28ff230a38a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chain = prompt | llm | output_parser"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec020d2b-0f98-449b-98f3-0d6c0ea3a3eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chain.invoke({\"input\": \"how can langsmith help with testing?\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20e25e02-7b25-4426-a2d9-aeeb1ad3c109",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pip install beautifulsoup4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b73c255-c52d-45e4-bb6a-46186001a332",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_community.document_loaders import WebBaseLoader\n",
+    "loader = WebBaseLoader(\"https://docs.smith.langchain.com/user_guide\")\n",
+    "\n",
+    "docs = loader.load()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f1b7d3dc-95cb-4013-9e75-5479042834b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_community.embeddings import OllamaEmbeddings\n",
+    "\n",
+    "embeddings = OllamaEmbeddings()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af6c9f77-39ee-4192-b332-0823f9f94b44",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pip install faiss-cpu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d694b684-e8b7-4ea1-b182-5c36a8fb43cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_community.vectorstores import FAISS\n",
+    "from langchain_text_splitters import RecursiveCharacterTextSplitter\n",
+    "\n",
+    "\n",
+    "text_splitter = RecursiveCharacterTextSplitter()\n",
+    "documents = text_splitter.split_documents(docs)\n",
+    "vector = FAISS.from_documents(documents, embeddings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6cfd619-f646-43b8-bb6b-522eb576c06d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fcc68263-20d8-45bb-b0d6-276a598d71b1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aaa01708-26b5-434c-bc3b-5debf204c6ea",
+   "metadata": {},
+   "source": [
+    "## 3. Deploy an app to port forward and share publically"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f301fcbf-8ad1-4858-9e8f-9d5cd3e095ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import gradio as gr\n",
+    "\n",
+    "gr.close_all()\n",
+    "\n",
+    "iface = gr.Interface(\n",
+    "    fn=replicate_api.message,\n",
+    "    inputs=gr.Textbox(lines=2, placeholder=\"Type your message here...\"),\n",
+    "    outputs=\"markdown\",\n",
+    "    title=\"Chat with Anthropic's llama3 70B model\",\n",
+    "    description=\"This is a simple chat app using llama3 70B online model.\",\n",
+    ")\n",
+    "\n",
+    "# Run the Gradio app on localhost:5000 or whichever port you specified\n",
+    "iface.launch(server_port=5000, inline=False, quiet=True)\n",
+    "\n",
+    "print(f\"See your app deployed publically with the port you're securely forwarding: {os.environ.get('PORT_FORWARD_URL')}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "180bfac0-859d-4fa9-8551-482ae5a98c29",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.8"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
